--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,1 +1,15 @@
 /* Add here all your CSS customizations */
+
+header {
+	clear: both;
+	border-top: 5px solid #2c3e50;
+	background: #2c3e50;
+	background: -moz-linear-gradient(top,  #2c3e50 0%, #2c3e50 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2c3e50), color-stop(100%,#2c3e50));
+	background: -webkit-linear-gradient(top,  #2c3e50 0%,#2c3e50 100%);
+	background: -o-linear-gradient(top,  #2c3e50 0%,#2c3e50 100%);
+	background: -ms-linear-gradient(top,  #2c3e50 0%,#2c3e50 100%);
+	background: linear-gradient(to bottom,  #2c3e50 0%,#2c3e50 100%);
+	min-height: 100px;
+	padding: 8px 0;
+}
