--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,14 +2,15 @@
 
 header {
 	clear: both;
-	border-top: 5px solid #2c3e50;
-	background: #2c3e50;
-	background: -moz-linear-gradient(top,  #2c3e50 0%, #2c3e50 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2c3e50), color-stop(100%,#2c3e50));
-	background: -webkit-linear-gradient(top,  #2c3e50 0%,#2c3e50 100%);
-	background: -o-linear-gradient(top,  #2c3e50 0%,#2c3e50 100%);
-	background: -ms-linear-gradient(top,  #2c3e50 0%,#2c3e50 100%);
-	background: linear-gradient(to bottom,  #2c3e50 0%,#2c3e50 100%);
+	border-top: 5px solid #ecf0f1;
+	background: #ecf0f1;
+	background: -moz-linear-gradient(top,  #ecf0f1 0%, #ecf0f1 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ecf0f1), color-stop(100%,#ecf0f1));
+	background: -webkit-linear-gradient(top,  #ecf0f1 0%,#ecf0f1 100%);
+	background: -o-linear-gradient(top,  #ecf0f1 0%,#ecf0f1 100%);
+	background: -ms-linear-gradient(top,  #ecf0f1 0%,#ecf0f1 100%);
+	background: linear-gradient(to bottom,  #ecf0f1 0%,#ecf0f1 100%);
 	min-height: 100px;
 	padding: 8px 0;
+	opacity: .9;
 }
