--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -38,7 +38,8 @@ header {
 }
 
 header > .navbar-collapse > .container {
-	position: relative
+	position: relative;
+	z-index: 1001;
 }
 
 header div.header-top {
