--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -37,6 +37,16 @@ a.thumb-info span.thumb-info-action {
 	width: 100%;
 }
 
+a.thumb-info span.thumb-info-inner {
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	display: block;
+	transition: all 0.3s;
+	/*white-space: nowrap;*/
+	text-align: center;
+}
+
 a.thumb-info span.thumb-info-title {
 	-moz-transition: all 0.3s;
 	-o-transition: all 0.3s;
@@ -57,18 +67,24 @@ a.thumb-info span.thumb-info-title {
 	width: 100%;
 }
 
+a.thumb-info div.thumb-info-type-box{
+	text-align:center;
+	width:100%;
+	position: absolute;
+}
+
 a.thumb-info span.thumb-info-type {
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
-	font-size: 14px;
-	/*float: left;*/
+	display: inline-block;
+	float: none;
+	font-size: 12px;
 	font-weight: 400;
 	letter-spacing: 0;
-	margin-bottom:-20px;
+	margin: 0px;
 	padding: 2px 9px;
 	text-transform: none;
-
 }
 
 a.thumb-info {
@@ -76,13 +92,27 @@ a.thumb-info {
 	overflow: hidden;
 	position: relative;
 	text-decoration: none;
-	
 }
 
-a.thumb-info div.thumb-info-type-box{
-	text-align:center;
-	width:100%;
+
+a.thumb-info span.thumb-info-action-icon {
+	-moz-border-radius: 0 0 0 25px;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-webkit-border-radius: 0 0 0 25px;
+	-webkit-transition: all 0.3s;
+	background: #CCC;
+	border-radius: 0 0 0 25px;
+	display: inline-block;
+	font-size: 25px;
+	height: 70px;
+	line-height: 80px;
 	position: absolute;
+	right: -100px;
+	text-align: center;
+	top: -100px;
+	transition: all 0.3s;
+	width: 70px;
 }
 
 .portfolio-price-normal{
@@ -129,7 +159,7 @@ a.thumb-info span.thumb-info-action-icon:hover {
 }
 
 a.thumb-info span.thumb-info-action-icon i {
-	font-size: 40px;
+	font-size: 50px;
 	text-shadow: 3px 3px 3px rgba(0,0,0,.2);
 	left: 0px;
 	position: relative;
@@ -142,4 +172,38 @@ a.thumb-info span.thumb-info-action-icon i {
 	padding-top:45%; 
 	color: rgba(145,145,145, .6);
 }
+
+
+/*.whats-hot{	
+	background: #AAA;
+	border:4px solid red;
+	border-radius: 8px;
+	padding: 8px;
+	padding-right:-200px;
+}
+
+.full-width .thumb-info{
+	transition:0s;
+}
+
+.sort-destination.full-width .no-transition {
+	width: 20%;
+	float: left;
 	
+}
+
+.sort-destination.full-width .no-transition .img-thumbnail,
+.sort-destination.full-width .no-transition a,
+.sort-destination.full-width .no-transition .thumb-info img {
+	-moz-border-radius: 0;
+	-webkit-border-radius: 0;
+	border-radius: 0;
+	float: left;
+}
+
+.sort-destination.full-width .no-transition .img-thumbnail {
+	border: none;
+	padding: 0;
+	/*margin: 0;
+
+}*/
