รวม ngmodule ไว้ที่ lib

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -177,6 +177,10 @@ a.thumb-info span.thumb-info-action-icon i {
 	width: 100%;
 }
 
+.square img{
+	margin: auto;
+	vertical-align: center;
+}
 
 /*.whats-hot{	
 	background: #AAA;
