--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -361,7 +361,7 @@ a.thumb-info span.thumb-info-rank {
     border:1px solid  #dddddd; 
     border-radius: 4px; 
     width: 90%; 
-    height: 200px; 
+    height: auto; 
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); 
     overflow: hidden; 
     padding: 5px; 
